--- a/exercises/06-Practicing-Rules/index.html
+++ b/exercises/06-Practicing-Rules/index.html
@@ -1,1 +1,27 @@
-//nothing to see here
+<!DOCTYPE html>
+<html>
+	<head></head>
+	<link rel="stylesheet" type="text/css" href="./styles.css" />
+	<body>
+		<h1 id="Tit1">The learning essay</h1>
+		<h2 id="Tit2">3 reasons you know you are learning</h2>
+		<p id="Par1">
+			We are going to explain in this paragraph the 3 most common signs that you should look into
+			<br />yourself to recognize if you are learning.
+		</p>
+		<ol>
+			<li>You are able to complete the excercises by yourself.</li>
+			<li>You understand what the teacher is talking about..</li>
+			<li>You are able to have conversations about the topic.</li>
+		</ol>
+		<h2 id="Tit2">3 reasons you know love what you are learning</h2>
+
+		<ul>
+			<li>Time passes fast.</li>
+			<li>You are anxious to finish this excercise and start the next one.</li>
+			<li>Is 12am and you don't want to go to sleep.</li>
+		</ul>
+
+		If you can't sleep, what better than watching videos of cats? <a id="Link" href="https://youtu.be/EtH9Yllzjcc"> Click Here.</a>
+	</body>
+</html>
