--- a/exercises/13-Anchor-Like-Button/index.html
+++ b/exercises/13-Anchor-Like-Button/index.html
@@ -7,6 +7,8 @@
 		<title>13 Anchor Like Button</title>
 	</head>
 	<body>
-		<a href="#" class="orange-btn">Beautiful Button</a>
+		<br />
+		<br />
+		<a style="color:white;" href="#" class="orange-btn">Beautiful Button </a>
 	</body>
 </html>
