--- a/exercises/07-Very-Specific-Rules/index.html
+++ b/exercises/07-Very-Specific-Rules/index.html
@@ -14,10 +14,11 @@
 		</p>
 		<ol>
 			<li>You are able to complete the exercises by yourself.</li>
-			<li>You understand what the teacher is talking about</li>
+			<li style="background:green">You understand what the teacher is talking about</li>
 			<li>Your are able to have conversations about the topic</li>
 		</ol>
 		<h2>3 reasons you know love what you are learning</h2>
+
 		<ul>
 			<li>Time passes fast.</li>
 			<li>You are anxious to finish this excercise and start the next one.</li>
