--- a/exercises/12-Relative-Length-EM-REM/index.html
+++ b/exercises/12-Relative-Length-EM-REM/index.html
@@ -8,13 +8,13 @@
 	</head>
 	<body>
 		<div id="my-first-div">
-			<h2>First h2 heading</h2>
-			<h3>First h3 heading</h3>
+			<h2 class="head2">First h2 heading</h2>
+			<h3 class="head3">First h3 heading</h3>
 			<p>Here is some nice fake content</p>
 		</div>
 		<div id="the-second-one">
-			<h2>Second h2 heading</h2>
-			<h3>Second h3 heading</h3>
+			<h2 class="head2">Second h2 heading</h2>
+			<h3 class="head3">Second h3 heading</h3>
 			<p>More fake content but now in the second container</p>
 		</div>
 	</body>
